# random

./: .gitignore  CMakeLists.txt
include/: multivariate_gaussian.h  rng.h
src/: multivariate_gaussian.cpp  multivariate_gaussian.h  rng.cpp  rng.h  test_multivariate_gausian.cpp  test_rng.cpp
test/: test_multivariate_gausian.cpp
